--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for "head"}}
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/committee-viewer.css">
 
@@ -16,7 +16,7 @@
   </head>
   <body>
     {{content-for "body"}}
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
     <script src="assets/vendor.js"></script>
     <script src="assets/committee-viewer.js"></script>
 
